CHANGES IN VERSION 1.12.0
-------------------------

NEW FEATURES

    o New function, sequence_complexity(): Using either the Wootton-Federhen,
      Trifonov, or DUST algorithms, calculate sequence complexity in sliding
      windows.

    o New function, mask_ranges(): Similarly to mask_seqs(), mask specific
      positions in a XStringSet object by replacing the letters with a specific
      filler character.

    o New function, motif_range(): Get the min/max range of possible logodds
      scores for a motif.

    o motif_pvalue(method): P-values and scores can now be calculated
      dynamically instead of exhaustively, substantially increasing both speed
      and accuracy for bigger jobs. The previous exhaustive method can still be
      used however, as the dynamic method does not allow non-finite values and
      thus must be pseudocount-adjusted.

    o scan_sequences(calc.pvals, calc.qvals, motif_pvalue.method,
      calc.qvals.method): The calc.pvals argument defaults to TRUE.
      The P-value calculation method now defaults to dynamic P-values (the
      previous method was an exhaustive calculation), though this can be
      changed via motif_pvalue.method. Additionally, adjusted P-values can be
      calculated as either BH, FDR or a Bonferroni-adjusted P-value. More
      details can be found in the Sequence Searches vignette.

    o write_homer(threshold, threshold.type): Finer control over the final
      motif logodds threshold included with the written motif is now
      available, using the style of argument parsing from scan_sequences().
      The previous logodds_threshold argument is now deprecated and set to
      NULL, but if set (e.g. an older script is being re-run) then the old
      behaviour of write_homer() will be used.

MINOR CHANGES

    o New global option, options(pseudocount.warning): Disable the message
      printed when a motif is pseudocount-adjusted.
    
    o Slight performance gains in get_bkg() window code.
