@@ -7,6 +7,7 @@ export(add_gap)
 export(add_multifreq)
 export(as.data.frame)
 export(average_ic)
+export(calc_complexity)
 export(cbind)
 export(colMeans)
 export(colSums)
