@@ -1,3 +1,41 @@
+@article{morgulis06,
+  title={A fast and symmetric {DUST} implementation to mask low-complexity DNA sequences},
+  year={2006},
+  author={A. Morgulis and E.M. Gertz and A.A. Schaffer and R. Agarwala},
+  journal={Journal of Computational Biology},
+  volume={13},
+  pages={1028--1040},
+}
+
+@article{orlov04,
+  title={Complexity: an internet resource for analysis of {DNA} sequence complexity},
+  year={2004},
+  author={Y.L. Orlov and V.N. Potapov},
+  journal={Nucleic Acids Research},
+  volume={32},
+  pages={W628--W633},
+}
+
+@incollection{trifonov90,
+  title={Making sense of the human genome},
+  author={E.N. Trifonov},
+  year={1990},
+  editor={R.H. Sarma},
+  booktitle={Structure \& Methods},
+  publisher={Adenine Press},
+  address={Albany},
+  pages={69--77},
+}
+
+@article{wootton93,
+  title={Statistics of local complexity in amino acid sequences and sequence databases},
+  year={1993},
+  author={J.C. Wootton and S. Federhen},
+  journal={Computers \& Chemistry},
+  volume={17},
+  pages={149--163},
+}
+
 @article{biophys03,
   title={A Biophysical Approach to Transcription Factor Binding Site Discovery},
   year={2003},
